[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icb_quanty"
version = "0.0.1"
authors = [
  {name = "Iker Caballero", email = "ikercb2000@gmail.com"},
]
maintainers = [
  {name = "Iker Caballero", email = "ikercb2000@gmail.com"}
]
description = "Quantitative finance package for alpha research and automatic investment."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.7"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["density_estim", "quantile_reg"]